--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,9 +8,11 @@ body {
 }
 
 ::-webkit-scrollbar {
+  display: none;
   width: 10px;
   height: 10px;
 }
+
 ::-webkit-scrollbar {
   background: transparent;
 }
